fix card container overflow on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -481,6 +481,7 @@ input:focus {
 @media only screen and (max-width: 600px) {
     .card-container {
         width: 35rem;
+        max-width:100%;
     }
 
     .search-container {
